--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <td>  <h1>Tee Vicks</h1>
                   <em> <p>A student of <strong> <a href="https://www.lautech.edu.ng/">Lautech</a></strong> </p>  </em>
                 <em><p>Department of Nursing</p></em>
-                <p>I am a 20 hear old kid, Nursing Department but trying to make codes, 
+                <p>I am a 20 year old kid, Nursing Department but trying to make codes, 
                 hoping this works out because i'm the lazy type. So help me God</p></td>
         </tr>
     </table>
